--- a/index.html
+++ b/index.html
@@ -25,21 +25,23 @@
         <title>DanDonald's</title>
     </head>
     <body>
-        <p class="long-copy red">
-            <b>Your attention, please! This is not a real website, it's just a portfolio project. Please don't take it seriously.</b>
-        </p>
+        <section class="section-attention">
+            <p class="red">
+                <b>Your attention, please! This is not a real website, it's just a portfolio project. Please don't take it seriously.</b>
+            </p>
+        </section>
         <header>
             <nav>
                 <div class="row">
                     <img src="resources/img/logo-white.png" alt="DanDonald's logo" class="logo">
                     <img src="resources/img/logo.png" alt="DanDonald's logo" class="logo-black">
+                    <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon-round"></i></a>
                     <ul class="main-nav js--main-nav">
                         <li><a href="#features">Food delivery</a></li>
                         <li><a href="#steps">How it works</a></li>
                         <li><a href="#cities">Our cities</a></li>
                         <li><a href="#signup">Sign up</a></li>
                     </ul>
-                    <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon-round"></i></a>
                 </div>
             </nav>
             <div class="hero-text-box">
