--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
             </div>
             <div class="row">
                 <p>
-                    Copyright 2018 DanDonald's. Design and development by <a href="ohhimark.xyz">ohhimark</a>. All rights reserved.
+                    Copyright 2018 DanDonald's. Design and development by <a href="github.com/dandesz198">dandesz198</a>. All rights reserved.
                 </p>
             </div>
         </footer>
